# tsfast

./: .gitignore  .pre-commit-config.yaml  00_core.ipynb  01_model.ipynb  01_models.ipynb  01a_IndRNN.ipynb  02_learner.ipynb  03_dataloaders.ipynb  03_tbptt_dl.ipynb  10_performance_test.ipynb  11_ProDiag.ipynb  11_TensorQuaternions.ipynb  11_dualrnn.ipynb  12_TensorQuaternions.ipynb  13_HPOpt.ipynb  13_PBT.ipynb  90_imu_example.ipynb  91_cascaded_tanks.ipynb  92_wiener_hammerstein.ipynb  93_mdt_benchmark.ipynb  93_noisyhammerstein.ipynb  93_silverbox.ipynb  96_EEG.ipynb  97_Battery.ipynb  CLAUDE.md  CONTRIBUTING.md  MATH.md  Makefile  PLAN_remove_fastai.md  QRNN.py  README.md  batch.prof  bench_phnn.py  benchmark_hdf5.py  index.html  index.ipynb  lsuv.py  mkdocs.yml  pyproject.toml  quaternions.html  (+6 more)
.github/workflows/: docs.yaml  main.yml  publish.yaml  test.yaml
00_data/: block.html  core.html  loader.html  split.html  transforms.html
01_datasets/: benchmark.html  core.html
02_learner/: callbacks.html  learner.html  losses.html
03_models/: cnn.html  layers.html  rnn.html
04_prediction/: ar.html  core.html  fransys.html
05_inference/: core.html
benchmarks/: bench_selective.py  benchmark_diagonal_scan.py  benchmark_dynonet.py  benchmark_narx.py  benchmark_rnn.py  benchmark_ssm.py  benchmark_tcn.py
comparisons/: README.md  compare_dynonet.py  compare_lru.py  compare_mamba.py  compare_phnn.py  compare_s5.py  compare_subnet.py  compare_transformer.py
docs/: PBT.html  ProDiag.html  TensorQuaternions.html  _config.yml  cascaded_tanks.html  core.html  imu_example.html  index.html  index.md  learner.html  mdt_benchmark.html  model.html  noisyhammerstein.html  performance_test.html  quaternions.html  search.json  sidebar.json  silverbox.html  sitemap.xml  spectogram.html  tune.html  wiener_hammerstein.html
docs/00_data/: block.html  core.html  loader.html  split.html  transforms.html
docs/01_datasets/: core.html  external.html
docs/02_learner/: callbacks.html  learner.html  losses.html
docs/03_models/: cnn.html  layers.html  rnn.html
docs/04_prediction/: ar.html  core.html  fransys.html
docs/05_inference/: core.html
docs/_data/: topnav.yml
docs/api/: quaternions.md  spectogram.md  tune.md
docs/getting-started/: concepts.md  installation.md
examples/: 01_train_simulation.ipynb  02_train_prediction.ipynb  03_pinn_training.ipynb  04_benchmark_rnn.py  04_custom_normalization.ipynb  05_fransys_casacaded_tanks.ipynb
examples/notebooks/: 00_minimal_example.ipynb  00_your_first_model.ipynb  01_data_pipeline.ipynb  01_train_simulation.ipynb  02_simulation.ipynb  02_train_prediction.ipynb  03_benchmark_rnn.ipynb  03_pinn_training.ipynb  03_prediction.ipynb  04_custom_normalization.ipynb  04_model_architectures.ipynb  05_fransys_casacaded_tanks.ipynb  05_losses_and_metrics.ipynb  06_custom_normalization.ipynb  07_callbacks_and_augmentation.ipynb  08_fransys.ipynb  08_saving_and_loading.ipynb  09_autoregressive.ipynb  09_custom_data_pipelines.ipynb  10_fransys.ipynb  10_pinn.ipynb  11_autoregressive.ipynb  11_identibench.ipynb  12_pinn.ipynb  12_seq_to_scalar.ipynb  12a_ddpinn_surrogate.ipynb  12b_ddpinn_vs_pirnn.ipynb  13_custom_data_pipelines.ipynb  13_identibench.ipynb  14_hyperparameter_optimization.ipynb  14_seq_to_scalar.ipynb  15_hyperparameter_optimization.ipynb  15_onnx_export.ipynb  16_onnx_export.ipynb  16_stateful_tbptt.ipynb  17_cuda_graphs.ipynb  17_stateful_tbptt.ipynb  18_cuda_graphs.ipynb
examples/scripts/: 00_minimal_example.py  00_your_first_model.py  01_data_pipeline.py  01_train_simulation.py  02_simulation.py  02_train_prediction.py  03_benchmark_rnn.py  03_pinn_training.py  03_prediction.py  04_custom_normalization.py  04_model_architectures.py  05_fransys_casacaded_tanks.py  05_losses_and_metrics.py  06_custom_normalization.py  07_callbacks_and_augmentation.py  08_fransys.py  08_saving_and_loading.py  09_autoregressive.py  09_custom_data_pipelines.py  10_fransys.py  10_pinn.py  11_autoregressive.py  11_identibench.py  12_pinn.py  12_seq_to_scalar.py  12a_ddpinn_surrogate.py  12b_ddpinn_vs_pirnn.py  13_custom_data_pipelines.py  13_identibench.py  14_hyperparameter_optimization.py  14_seq_to_scalar.py  (+8 more)
nbs/: 00_core.ipynb  01_models.ipynb  01_quaternions.ipynb  02_learner.ipynb  03_dataloaders.ipynb  03_spectogram.ipynb  04_tune.ipynb  11_dualrnn.ipynb  12_TensorQuaternions.ipynb  13_HPOpt.ipynb  index.ipynb
seqdata/: _modidx.py  _nbdev.py  core.py  dataloaders.py  dualrnn.py  hpopt.py  learner.py  model.py  pbt.py  prodiag.py  quaternions.py  seq_core.py  tbptt.py
tests/: conftest.py  test_data.py  test_datasets.py  test_ddpinn.py  test_device.py  test_dynonet.py  test_dynonet_adjoint.py  test_gpu_packing.py  test_inference.py  test_learner.py  test_lru.py  test_mamba.py  test_models.py  test_narx.py  test_onnx.py  test_phnn.py  test_phnn_backends.py  test_pinc.py  test_pinn.py  test_prediction.py  test_prefetch.py  test_profiling.py  test_quaternions.py  test_s5.py  test_scan.py  test_scan_allpole_backend.py  test_scan_diagonal_backends.py  test_scan_dispatch.py  test_scan_selective_backends.py  test_spectrogram.py  test_statespace.py  test_subnet.py  test_training.py  test_transformer.py  test_tsdata.py  test_tune.py
tsfast/: __init__.py  _modidx.py  basics.py  benchmark.py  core.py  dataloaders.py  dualrnn.py  hpopt.py  learner.py  quaternions.py  spectogram.py  tune.py
(+247 files in other folders)
