[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsfast"
dynamic = ["version"]
description = "Deep learning library for time series analysis and system identification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Daniel Oliver Martin Weber", email = "daniel.om.weber@gmail.com"}]
keywords = ["fastai", "time-series", "system-identification", "deep-learning", "pytorch", "fransys"]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastai>=2.7.0",
    "fastprogress<1.1",
    "torch>=2.1",
    "identibench",
    "matplotlib",
    "ray[tune]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "nbmake",
    "ruff",
    "ipykernel",
    "twine",
]

[project.urls]
Repository = "https://github.com/daniel-om-weber/tsfast"

[tool.hatch.version]
path = "tsfast/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tsfast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that train models (call .fit())",
    "pinn: tests requiring PINN test data",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F403", "F405", "F811", "E401", "E701", "E702", "E402"]
