[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsfast"
dynamic = ["version"]
description = "Deep learning library for time series analysis and system identification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Daniel Oliver Martin Weber", email = "daniel.om.weber@gmail.com"}]
keywords = ["fastai", "time-series", "system-identification", "deep-learning", "pytorch", "fransys"]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastai>=2.7.0",
    "fastprogress<1.1",
    "torch>=2.1",
    "identibench",
    "matplotlib",
    "ray[tune]",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.14",
    "onnxruntime>=1.16,<1.24; python_version == '3.10'",
    "onnxruntime>=1.16; python_version >= '3.11'",
]
dev = [
    "pytest",
    "pytest-cov",
    "nbmake",
    "ruff",
    "ipykernel",
    "twine",
    "jupytext",
    "pre-commit",
    "onnx>=1.14",
    "onnxruntime>=1.16,<1.24; python_version == '3.10'",
    "onnxruntime>=1.16; python_version >= '3.11'",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-jupyter>=0.25",
]

[project.urls]
Repository = "https://github.com/daniel-om-weber/tsfast"
Documentation = "https://daniel-om-weber.github.io/tsfast"

[tool.hatch.version]
path = "tsfast/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tsfast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that train models (call .fit())",
    "pinn: tests requiring PINN test data",
]
filterwarnings = [
    "ignore:datetime.datetime.utcnow:DeprecationWarning:gnupg",
    "ignore:unclosed file:ResourceWarning:bagpy",
    "ignore:`torch.jit.script` is deprecated:DeprecationWarning:torch",
    "ignore:`torch.jit.script_method` is deprecated:DeprecationWarning:torch",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]      # re-export barrels: unused imports + wildcard imports
"tsfast/basics.py" = ["F401", "F403"] # re-export barrel
"tsfast/quaternions.py" = ["F811"]    # @dispatch overloads and encodes type-dispatch

[tool.jupytext]
formats = "notebooks//ipynb,scripts//py:percent"
